--- a/src/Components/Navigation/Navigation.module.scss
+++ b/src/Components/Navigation/Navigation.module.scss
@@ -61,6 +61,7 @@ nav{
    padding: $base-padding;
    position: fixed;
    width: 100%;
+   -webkit-backface-visibility: hidden;
 
    div{
        a{
